WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213057
Text manipulation does not observe inserted elements that are invisible
https://bugs.webkit.org/show_bug.cgi?id=213057
Summary
Text manipulation does not observe inserted elements that are invisible
Sihui Liu
Reported
2020-06-10 16:08:28 PDT
These inserted elements can become visible later.
Attachments
Patch
(6.84 KB, patch)
2020-06-10 16:22 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.85 KB, patch)
2020-06-10 16:59 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-06-10 16:08:56 PDT
<
rdar://problem/63768253
>
Sihui Liu
Comment 2
2020-06-10 16:22:48 PDT
Created
attachment 401600
[details]
Patch
Wenson Hsieh
Comment 3
2020-06-10 16:25:00 PDT
Comment on
attachment 401600
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=401600&action=review
> Source/WebCore/ChangeLog:10 > + element. It currently sets the observing range to be the visible start postion and visible end position of the
postion => position
> Source/WebCore/ChangeLog:15 > + Test: TextManipulation.CompleteTextManipulationCanSplitContent
Nit - TextManipulation.StartTextManipulationFindsInsertedClippedText
Sihui Liu
Comment 4
2020-06-10 16:59:10 PDT
Created
attachment 401606
[details]
Patch for landing
EWS
Comment 5
2020-06-10 17:28:11 PDT
Committed
r262879
: <
https://trac.webkit.org/changeset/262879
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401606
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug